--- a/beststore/src/main/resources/templates/products/EditProduct.html
+++ b/beststore/src/main/resources/templates/products/EditProduct.html
@@ -15,12 +15,24 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto rounded border p-4 m-4">
-          <h2 class="text-center mb-5">New Product</h2>
+          <h2 class="text-center mb-5">Edit Product</h2>
           <form
             method="post"
             enctype="multipart/form-data"
             th:object="${productDto}"
           >
+            <!-- ID -->
+            <div class="row mb-3">
+              <label class="col-sm-4 col-form-label">ID</label>
+              <div class="col-sm-8">
+                <input
+                  type="text"
+                  class="form-control-plaintext"
+                  th:value="${product.id}"
+                  readonly
+                />
+              </div>
+            </div>
             <!-- Name -->
             <div class="row mb-3">
               <label class="col-sm-4 col-form-label">Name</label>
@@ -107,6 +119,16 @@
             </div>
             <!-- Image -->
             <div class="row mb-3">
+              <div class="offset-sm-4 col-sm-8">
+                <img
+                  th:src="@{'/images/' + ${product.imageFileName}}"
+                  alt="hinh anh"
+                  width="150"
+                />
+              </div>
+            </div>
+            <!-- Image -->
+            <div class="row mb-3">
               <label class="col-sm-4 col-form-label">Image</label>
               <div class="col-sm-8">
                 <input
@@ -119,6 +141,18 @@
                   th:errorclass="text-danger"
                   th:errors="${productDto.imageFile}"
                 ></p>
+              </div>
+            </div>
+            <!-- Create At -->
+            <div class="row mb-3">
+              <label class="col-sm-4 col-form-label">Created At</label>
+              <div class="col-sm-8">
+                <input
+                  readonly
+                  type="text"
+                  class="form-control-plaintext"
+                  th:value="${product.createAt}"
+                />
               </div>
             </div>
             <!-- Button -->
